--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Techno Store</title>
-    
+    <script src="Vue/vue.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+   <div id="app">
+   {{produtos}}
+   </div>
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
